--- a/LMS/Areas/Teachers/Views/Attendance/Session.cshtml
+++ b/LMS/Areas/Teachers/Views/Attendance/Session.cshtml
@@ -31,7 +31,7 @@
                                 <thead>
                                     <tr>
                                         <th>Session ID</th>
-                                        <th>Session Name</th>
+                                        <th>Session Title</th>
                                         <th>Date</th>
                                         <th>Start Time</th>
                                         <th>End Time</th>
@@ -102,7 +102,7 @@
                                         <div class=" row">
                                             <div class="col-md-6 pr-1">
                                                 <div class="form-group">
-                                                    <label>Session Name</label>
+                                                    <label>Session Title</label>
                                                     <input type="text" class="form-control" required="" name="Session_Name">
                                                 </div>
                                             </div>
@@ -134,7 +134,7 @@
                                         <div class=" row">
                                             <div class="col-md-4 pr-1">
                                                 <div class="form-group">
-                                                    <label>Class Name</label>
+                                                    <label>Class </label>
                                                     <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes">
                                                         <option value="0">--Select--</option>
                                                     </select>
@@ -143,7 +143,7 @@
                                             <div class="col-md-4 pl-1">
 
                                                 <div class="form-group">
-                                                    <label>Section Name</label>
+                                                    <label>Section </label>
                                                     <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections">
                                                         <option value="0">--Select--</option>
                                                     </select>
@@ -152,7 +152,7 @@
                                             <div class="col-md-4 pl-1">
 
                                                 <div class="form-group">
-                                                    <label>Subject Name</label>
+                                                    <label>Subject </label>
                                                     <select id="Subject_Id" name="Subject_Id" class="form-control" asp-for="Subject_Id" asp-items="@Model.Subjects">
                                                         <option value="0">--Select--</option>
                                                     </select>
@@ -184,7 +184,7 @@
                                         <div class=" row">
                                             <div class="col-md-6 pr-1">
                                                 <div class="form-group">
-                                                    <label>Session Name</label> 
+                                                    <label>Session Title</label> 
                                                     <input type="text" class="form-control" required="" name="Session_Name" id="Session_Name">
                                                 </div>
                                             </div>
@@ -216,21 +216,21 @@
                                         <div class=" row">
                                             <div class="col-md-4 pr-1">
                                                 <div class="form-group">
-                                                    <label>Class Name</label>
+                                                    <label>Class </label>
                                                     <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes"></select>
                                                 </div>
                                             </div>
                                             <div class="col-md-4 pl-1">
 
                                                 <div class="form-group">
-                                                    <label>Section Name</label>
+                                                    <label>Section </label>
                                                     <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections"></select>
                                                 </div>
                                             </div>
                                             <div class="col-md-4 pl-1">
 
                                                 <div class="form-group">
-                                                    <label>Subject Name</label>
+                                                    <label>Subject </label>
                                                     <select id="Subject_Id" name="Subject_Id" class="form-control" asp-for="Subject_Id" asp-items="@Model.Subjects"></select>
                                                 </div>
                                             </div>
