--- a/LMS/Areas/Teachers/Views/Test/AddTest.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/AddTest.cshtml
@@ -85,8 +85,8 @@
                                     <label>Assessment Status</label>
                                     <select id="ddlAssessmentStatus" asp-for="Assessment_Status" class="form-control">
                                         <option value="-1">--Select--</option>
-                                        <option value="1">Active</option>
-                                        <option value="0">De-Active</option>
+                                        <option value="1">Activate</option>
+                                        <option value="0">Deactivate</option>
                                     </select>
                                 </div>
                             </div>
