--- a/LMS/Views/Shared/Components/SPSidebar/SPSidebarVC.cshtml
+++ b/LMS/Views/Shared/Components/SPSidebar/SPSidebarVC.cshtml
@@ -56,7 +56,7 @@
         <li class="has-child">
             <a asp-controller="Library" asp-action="Index" >
                 <i class="now-ui-icons education_atom"></i>
-                <p>Library </p>
+                <p>Virtual Library </p>
             </a>
 
 
