--- a/LMS/Views/Shared/Components/TPSidebar/TPSidebarVC.cshtml
+++ b/LMS/Views/Shared/Components/TPSidebar/TPSidebarVC.cshtml
@@ -33,7 +33,7 @@
             <a asp-area="teachers" asp-controller="lecture" asp-action="index">
                 <i class="now-ui-icons design_app"></i>
 
-                <p>Lessons List </p>
+                <p>Lesson List </p>
             </a>
 
         </li>
@@ -76,7 +76,7 @@
         <li class="has-child">
             <a href="#">
                 <i class="now-ui-icons education_atom"></i>
-                <p>Library </p>
+                <p>Virtual Library </p>
             </a>
             <ul>
                 <li><a asp-controller="Library" asp-action="addBook">Add Item</a></li>
