--- a/LMS/Areas/Teachers/Views/Lecture/AddLecture.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/AddLecture.cshtml
@@ -20,7 +20,7 @@
                         <div class="row">
                             <div class="col-md-4 pr-1">
                                 <div class="form-group">
-                                    <label>Class Name</label>
+                                    <label>Class </label>
                                     @*<select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.ClassList, "Class_Id", "Class_Name"))"></select>*@
                                     @*<select id="ddlClass" asp-for="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.ClassList, "Class_Id", "Class_Name"))"></select>*@
                                     <select id="ddlClass" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@ViewBag.ClassList"></select>
@@ -28,14 +28,14 @@
                             </div>
                             <div class="col-md-4 pr-1">
                                 <div class="form-group">
-                                    <label>Section Name</label>
+                                    <label>Section </label>
                                     @*<select id="ddlSection" asp-for="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SectionList, "Section_Id", "Section_Name"))"></select>*@
                                     <select id="ddlSection" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@ViewBag.sectionList"></select>
                                 </div>
                             </div>
                             <div class="col-md-4 pr-1">
                                 <div class="form-group">
-                                    <label>Subject Name</label>
+                                    <label>Subject </label>
                                     @*<select id="ddlSubject" asp-for="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SubjectList, "Subject_Id", "Subject_Name"))"></select>*@
                                     <select id="ddlSubject" name="Subject_Id" class="form-control" asp-for="Subject_Id" asp-items="@ViewBag.subjectList"></select>
                                 </div>
@@ -55,8 +55,8 @@
                             </div>
                             <div class="col-md-6 pl-1">
                                 <div class="form-group">
-                                    <label>Lecture Name</label>
-                                    <input asp-for="Lecture_Name" autocomplete="off" class="form-control" placeholder="Lecture Name">
+                                    <label>Lesson Title</label>
+                                    <input asp-for="Lecture_Name" autocomplete="off" class="form-control" placeholder="Lesson Title">
                                 </div>
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label>Details</label>
-                                    <input asp-for="Lecture_Detail" autocomplete="off" class="form-control" placeholder="Lecture Details">
+                                    <input asp-for="Lecture_Detail" autocomplete="off" class="form-control" placeholder="Lesson Details">
                                 </div>
                             </div>
                         </div>
