--- a/LMS/Areas/Teachers/Views/Test/AddTestDetails.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/AddTestDetails.cshtml
@@ -287,7 +287,7 @@
                 contentType: false,
                 data: data,
                 success: function Success(response) {
-                    debugger;
+                    //debugger;
                     if (response == 1) {
                         window.location.href = "/teachers/test";
                     } else {
